# cDPR

./: .gitignore  README.md  preprocess.py  pyproject.toml
dpr/: dpr_dataloader.py  evaluate.py  generate_db.py  inference.py  models.py  train.py
dpr/configs/: generate_db.yaml  train_batch32.yaml
