[tool.poetry]
name = "dpr"
version = "0.1.0"
description = ""
authors = ["juhwanlee <juhwanlee@diquest.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
kiwipiepy = "^0.17.1"
pandas = "2"
pyarrow = "^16.0.0"
fastparquet = "^2024.2.0"
transformers = "^4.40.1"
kss = "^5.2.0"
pinecone-client = "^4.0.0"
torch = "2.0.0"
numpy = "1.23.2"
scikit-learn = "^1.5.0"
wandb = "^0.17.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
